--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Chuck Norris Facts</string>
     <string name="search">Search</string>
+    <string name="searchHint">Type your search</string>
 </resources>
