--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Chuck Norris Facts</string>
     <string name="search">Search</string>
     <string name="searchHint">Type your search</string>
+    <string name="searchBy">Search by:</string>
 </resources>
